@@ -58,6 +58,14 @@
 										<border>5</border>
 									</object>
 									<object class="sizeritem">
+										<object class="wxStaticText" name="ID_STATICTEXT9" variable="StaticText8" member="yes">
+											<label>Last Collision:</label>
+										</object>
+										<flag>wxBOTTOM|wxALIGN_RIGHT|wxALIGN_CENTER_VERTICAL</flag>
+										<border>5</border>
+										<option>1</option>
+									</object>
+									<object class="sizeritem">
 										<object class="wxStaticText" name="ID_STATICTEXT6" variable="StaticText6" member="yes">
 											<label>Framerate:</label>
 										</object>
@@ -126,6 +134,16 @@
 										</object>
 										<flag>wxBOTTOM|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
 										<border>5</border>
+									</object>
+									<object class="sizeritem">
+										<object class="wxStaticText" name="ID_t_collision" variable="t_collision" member="yes">
+											<label></label>
+											<size>150,-1</size>
+											<style>wxST_NO_AUTORESIZE</style>
+										</object>
+										<flag>wxBOTTOM|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
+										<border>5</border>
+										<option>1</option>
 									</object>
 									<object class="sizeritem">
 										<object class="wxStaticText" name="ID_STATICTEXT7" variable="t_framerate" member="yes">
@@ -242,17 +260,17 @@
 						<border>5</border>
 					</object>
 					<object class="sizeritem">
-						<object class="wxButton" name="ID_bInitRealtime" variable="bInitRealtime" member="yes">
-							<label>Init Realtime</label>
+						<object class="wxButton" name="ID_bCameraControl" variable="bCameraControl" member="yes">
+							<label>Camera Control</label>
 							<enabled>0</enabled>
-							<handler function="On_bInitRealtime_Click" entry="EVT_BUTTON" />
+							<handler function="On_bCameraControl_Click" entry="EVT_BUTTON" />
 						</object>
 						<flag>wxBOTTOM|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 						<border>5</border>
 					</object>
 					<object class="sizeritem">
 						<object class="wxButton" name="ID_bEditElevator" variable="bEditElevator" member="yes">
-							<label>Edit Elevator</label>
+							<label>Elevator Editor</label>
 							<handler function="On_bEditElevator_Click" entry="EVT_BUTTON" />
 						</object>
 						<flag>wxBOTTOM|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
